force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/Apttus_QPConfig__ProposalProductAttributeValue__c.object-meta.xml
<CustomObject>
    <description>Represents the attribute values for a product class in a proposal line item</description>
    <label>Proposal Product Attribute Value</label>
    <nameField>
        <displayFormat>VL-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Product Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>