force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_Airmail_Letters_AVG_Weight_KG__c.field-meta.xml
<CustomField>
    <fullName>APT_Airmail_Letters_AVG_Weight_KG__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Airmail Letters AVG Weight(KG) for Estimated Revenue Calculation</description>
    <label>Airmail Letters AVG Weight(KG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>