force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_Charge_Code_C4__c.field-meta.xml
<CustomField>
    <fullName>APT_Charge_Code_C4__c</fullName>
    <label>Charge Code C4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>