force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>APT_Customer_Tier__c</fullName>
    <description>Tier value configured through cart for product and customer</description>
    <label>Tier (ex Gst)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TIER 1</fullName>
                <label>TIER 1 ($2,500.00 - $4,999.99)</label>
            </value>
            <value>
                <fullName>TIER 2</fullName>
                <label>TIER 2 ($5,000.00 - $9,999.99)</label>
            </value>
            <value>
                <fullName>TIER 3</fullName>
                <label>TIER 3 ($10,000.00 - $19,999.99)</label>
            </value>
            <value>
                <fullName>TIER 4</fullName>
                <label>TIER 4 ($20,000.00 - $49,999.99)</label>
            </value>
            <value>
                <fullName>TIER 5</fullName>
                <label>TIER 5 ($50,000.00 - $124,999.99)</label>
            </value>
            <value>
                <fullName>TIER 6</fullName>
                <label>TIER 6 ($125,000.00 - $249,999.99)</label>
            </value>
            <value>
                <fullName>TIER 7</fullName>
                <label>TIER 7 ($250,000.00 - $499,999.99)</label>
            </value>
            <value>
                <fullName>TIER 8</fullName>
                <label>TIER 8 ($500,000.00 - $999,999.99)</label>
            </value>
            <value>
                <fullName>TIER 9</fullName>
                <label>TIER 9 ($1,000,000 - $2,499,999.99)</label>
            </value>
            <value>
                <fullName>TIER 10</fullName>
                <label>TIER 10 ($2,500,000.00 - $4,999,999.99)</label>
            </value>
            <value>
                <fullName>TIER 11</fullName>
                <label>TIER 11 ($5,000,000.00 - $9,999,999.99)</label>
            </value>
            <value>
                <fullName>TIER 12</fullName>
                <label>TIER 12 ($10,000,000.00 - $19,999,999.99)</label>
            </value>
            <value>
                <fullName>TIER 13</fullName>
                <label>TIER 13 ($20,000,000.00 - $39,999,999.99)</label>
            </value>
            <value>
                <fullName>TIER 14</fullName>
                <label>TIER 14 ($40,000,000.00 +)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>