force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_Estimated_Band__c.field-meta.xml
<CustomField>
    <fullName>APT_Estimated_Band__c</fullName>
    <label>Estimated Band</label>
    <length>16</length>
    <type>Text</type>
</CustomField>