force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_Existing_APPC_Customer__c.field-meta.xml
<CustomField>
    <fullName>APT_Existing_APPC_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The value indicates if the customer is existing or not</description>
    <label>Existing APPC Customer</label>
    <type>Checkbox</type>
</CustomField>