force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_International_Standard_Volume__c.field-meta.xml
<CustomField>
    <fullName>APT_International_Standard_Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <label>International Standard Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>