force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_International_Standard_Weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>APT_International_Standard_Weight_Kgs__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>International Standard Weight (Kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>