force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_Item_Weight__c.field-meta.xml
<CustomField>
    <fullName>APT_Item_Weight__c</fullName>
    <label>Item/Weight(Kg)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>