force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_LPD_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_LPD_Service_Type__c</fullName>
    <description>Service Type picklist for &apos;Local Pickup and Delivery Services&apos; product only.</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Service</fullName>
            </value>
            <value>
                <fullName>Pickup Service</fullName>
            </value>
            <value>
                <fullName>Pickup &amp; Delivery At the same time</fullName>
            </value>
            <value>
                <fullName>Combined Pickup &amp; Delivery Service</fullName>
            </value>
            <value>
                <fullName>Consolidated Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>