force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_PostBillPay_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_PostBillPay_Customer_Type__c</fullName>
    <label>Customer Type</label>
    <length>225</length>
    <type>Text</type>
</CustomField>