force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_Pricing_Structutre__c.field-meta.xml
<CustomField>
    <fullName>APT_Pricing_Structutre__c</fullName>
    <formula>Apttus_QPConfig__LineItemId__r.Apttus_QPConfig__ConfigurationId__r.APT_Line_Item__r.APT_Pricing_Structutre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Structutre</label>
    <type>Text</type>
</CustomField>