force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_To_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>APT_To_Address_Country__c</fullName>
    <label>To Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>