force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_To_Instructions__c.field-meta.xml
<CustomField>
    <fullName>APT_To_Instructions__c</fullName>
    <label>To Instruction</label>
    <length>250</length>
    <type>Text</type>
</CustomField>