force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_Transit_Cover_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Transit_Cover_Type__c</fullName>
    <label>Transit Cover Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>