force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_Zone_4_Dispersion__c.field-meta.xml
<CustomField>
    <fullName>APT_Zone_4_Dispersion__c</fullName>
    <defaultValue>0.189</defaultValue>
    <description>Zone 4 Dispersion(%) for Estimated Revenue Calculation</description>
    <label>Zone 4 Dispersion(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>