force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APT_Zone_6Digital_Dispersion__c.field-meta.xml
<CustomField>
    <fullName>APT_Zone_6Digital_Dispersion__c</fullName>
    <defaultValue>0.4079</defaultValue>
    <label>Zone 6 Dispersion(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>