force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/APTS_Price_Structure__c.field-meta.xml
<CustomField>
    <fullName>APTS_Price_Structure__c</fullName>
    <label>Price Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BASE+PER_KG {Z30}</fullName>
            </value>
            <value>
                <fullName>BANDED {Z30}</fullName>
            </value>
            <value>
                <fullName>WINE {Z30}</fullName>
            </value>
            <value>
                <fullName>BANDED SPECIAL EXPRESS {Z40}</fullName>
            </value>
            <value>
                <fullName>BANDED {Z40}</fullName>
            </value>
            <value>
                <fullName>BASE+PER_KG {Z40}</fullName>
            </value>
			<value>
                <fullName>Banded Z2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>