force-app/main/default/objects/Apttus_QPConfig__ProposalProductAttributeValue__c/fields/SAP_Rating_Group__c.field-meta.xml
<CustomField>
    <fullName>SAP_Rating_Group__c</fullName>
    <label>SAP Rating Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>